redactable/tests/ui/sensitive_display_sparse_positional_rejected.rs
use redactable::SensitiveDisplay;

#[derive(SensitiveDisplay)]
enum SparseError {
    #[error("second field {1}")]
    Pair(String, String),
}

fn main() {}
